# starsnode

./: .gitignore  1.json  README.md  other-client.md  simple-list.html  数据格式.json  需求列表.txt
Android/: .gitignore  gradle.properties  settings.gradle  界面参考.html
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/: websocket数据参考.json
Android/app/src/main/res/anim/: pulse_animation.xml
Android/app/src/main/res/drawable/: card_elevation.xml  filter_chip_background.xml  gradient_device_linux.xml  gradient_device_windows.xml  gradient_stat_cpu.xml  gradient_stat_default.xml  gradient_stat_linux.xml  gradient_stat_memory.xml  gradient_stat_online.xml  gradient_stat_windows.xml  ic_cpu_white.xml  ic_devices_white.xml  ic_disk_white.xml  ic_expand_more.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_linux_white.xml  ic_memory_white.xml  ic_network_white.xml  ic_search.xml  ic_windows_white.xml  metric_card_bg.xml  metric_icon_cpu.xml  metric_icon_disk.xml  metric_icon_memory.xml  metric_icon_network.xml  metric_icon_temperature.xml  search_background.xml  stat_card_gradient.xml  status_dot.xml  status_indicator_critical.xml  status_indicator_warning.xml
Android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  item_device_card.xml  item_metric_card.xml  item_network_interface.xml  item_stat_card.xml
Android/app/src/main/res/menu/: main_menu.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
android-h5/: settings.gradle
android-h5/app/: build.gradle
android-h5/app/src/main/: AndroidManifest.xml
android-h5/app/src/main/assets/: index.html
android-h5/app/src/main/assets/assets/: index.js
android-h5/app/src/main/assets/css/: app.7e2a7218.css
android-h5/app/src/main/assets/js/: app.091f303d.js  app.091f303d.js.map  chunk-vendors.49d5eb48.js  chunk-vendors.49d5eb48.js.map
android-h5/app/src/main/res/layout/: activity_main.xml
android-h5/app/src/main/res/values/: strings.xml  themes.xml
android-h5/app/src/main/res/values-night/: themes.xml
android-h5/app/src/main/res/xml/: network_security_config.xml
android-h5/gradle/wrapper/: gradle-wrapper.properties
client/: config.js  package-lock.json  test.js
client/app/: client.js  server.js
client/app/utils/: functions.js  os-data.js
client/js-client/: config.js  package.json
client/linux-client/: CMakeLists.txt  README.md  config.json  devinfo.cpp  devinfo.h  easywsclient.cpp  info.cpp  info.h  linuxinfo.cpp  main.cpp  reflect_json.hpp
client/qt-client/: CMakeLists.txt  info.cpp  info.h  linuxinfo.cpp  main.cpp  wininfo.cpp
client/rust-client/: Cargo.toml  config.json
client/rust-client/src/: lib.rs  main.rs  modles.rs  services.rs  utils.rs
qt-client/win/: CMakeLists.txt  devinfo.h  info.cpp  info.h  main.cpp  qtjson.hpp  wininfo.cpp
server/: config.js
server/app/: server.js  simpleHttpServer.js
server/app/utils/: functions.js
server/test/: test.js
web/: AGENTS.md  simple-list.html
web-h5/: .mcp.json  build-android.js  fix-android-webview.js  package.json  vite.config.js
web-h5-vue2/: CLAUDE.md  README.md  package.json  snapshot-verbose.txt  snapshot.md  vue.config.js
web-h5-vue2/public/: index.html
web-h5-vue2/src/: App.vue  main.js
web-h5-vue2/src/assets/: monitor.css  问题清单.md
web-h5-vue2/src/components/: DeviceCard.vue  DeviceList.vue  HardwareCharts.vue  MonitorHeader.vue  SettingsModal.vue  SummaryCards.vue
web-h5-vue2/src/mixins/: chartMixin.js
web-h5-vue2/src/router/: index.js
web-h5-vue2/src/services/: websocket.js
web-h5-vue2/src/views/: Monitor.vue
web-h5-vue2/原型图/: data.json  需求文档.md
web-h5/public/: index.html
web-h5/src/: App.vue  main.js
web-h5/src/assets/: main.css  monitor.css
web-h5/src/components/: DeviceCard.vue  NetworkInterface.vue  SettingsModal.vue  SummarySection.vue
web-h5/src/services/: websocket.js
web-h5/原型图/: app.js  index.html  style.css
(+20 files in other folders)
