[package]
name = "starnode"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tungstenite = "0.26.2"
network-interface = "2.0.1"
sysinfo = "0.35.1"
chrono = "0.4.41"
reqwest =  { version = "0.12.19", features = ["blocking"] }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = ["Win32_System_RemoteDesktop", "Win32_System_StationsAndDesktops"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
